# SensorFusion_ros

./: README.md  fusion_launch.launch
camera/: CMakeLists.txt  package.xml
camera/src/: image_converter.cpp
cameraPy/: CMakeLists.txt  package.xml
cameraPy/src/: cameraVisualization.py  darknet.py  object-detection.py
fusion/: CMakeLists.txt  package.xml
fusion/include/fusion/fusion_objects/: DarknetObject.h  FusedObject.h  MappedPoint.h
fusion/src/: cluster_camera_fusion.cpp  lidar_camera_fusion.cpp  lidar_object_fusion.cpp
fusion/src/fusion_objects/: DarknetObject.cpp  FusedObject.cpp  MappedPoint.cpp
launch/: cluster_camera_fusion_BMW.launch  cluster_camera_fusion_CARLA.launch  cluster_camera_fusion_KITTI.launch  lidar_camera_fusion_BMW.launch  lidar_camera_fusion_CARLA.launch  lidar_camera_fusion_KITTI.launch  lidar_object_fusion_BMW.launch  lidar_object_fusion_CARLA.launch  lidar_object_fusion_KITTI.launch
lidar/: CMakeLists.txt  package.xml
lidar/src/: cloud_crop.cpp  clustering.cpp  clusteringCUDA.cpp  donSegmentationCUDA.cpp  example.cpp  segmentation.cpp  segmentation2.cpp  segmentationCUDA.cpp
sensor_fusion_msg/: CMakeLists.txt  package.xml
sensor_fusion_msg/msg/: CameraObjects.msg  FusedObjectsMsg.msg  LidarClusters.msg  MappedPointMsg.msg  ObjectBoundingBox.msg
tracklet_to_label/: eval.py
tracklet_to_label/matlab/: convertOxtsToPose.m  drawBox2D.m  drawBox3D.m  echoTracklet.m  extractPoses.m  latToScale.m  latlonToMercator.m  loadCalibration.m  loadCalibrationCamToCam.m  loadCalibrationRigid.m  loadOxtsliteData.m  loadTimestamps.m  make.m  project.m  projectToImage.m  readTracklets.m  readTrackletsMex.cpp  run_demoVehiclePath.m  run_demoVelodyne.m  test_labels.xml  tracklet_to_label.m  visualization.m  wrapToPi.m
